fix: Fix semantic HTML element placement and add padding to main so that cat counter and table heading is visible

--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@ main {
   min-height: 100vh;
   margin: 0 auto;
   background-color: #FFF;
+  padding-top: 50px;
 
 }
 
